Map.of used
GitOrigin-RevId: b94c32f34fa3a2df1ffa7f8e8a1f7959931e1bb0